--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "octopipe",
+  "name": "octopad",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,17 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "register-service-worker": "^1.7.1",
     "sockjs-client": "^1.4.0",
     "vue": "^2.6.11",
-    "vue-chartjs": "^3.5.0",
+    "vue-ls": "^3.2.1",
     "vue-router": "^3.1.6",
     "vue-router-layout": "^0.1.2",
     "vuetify": "^2.2.11",
+    "vuetify-toast-snackbar": "^0.6.1",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
