--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lodash.clonedeep": "^4.5.0",
     "register-service-worker": "^1.7.1",
     "sockjs-client": "^1.4.0",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-ls": "^3.2.1",
     "vue-router": "^3.1.6",
