--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^3.6.4",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
+    "portal-vue": "^2.1.7",
     "register-service-worker": "^1.7.1",
     "sockjs-client": "^1.4.0",
     "vee-validate": "^2.2.15",
