--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build:app": "cd app && npm run build"
   },
   "dependencies": {
+    "@capacitor/ios": "^2.0.1",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
@@ -16,6 +18,7 @@
     "sockjs-client": "^1.4.0",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-ls": "^3.2.1",
     "vue-router": "^3.1.6",
     "vue-router-layout": "^0.1.2",
