--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@capacitor/ios": "^2.0.1",
     "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
+    "html5-qrcode": "^1.0.8",
     "lodash.clone": "^4.5.0",
     "lodash.clonedeep": "^4.5.0",
     "portal-vue": "^2.1.7",
